fix: rollback z-index

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   position: absolute;
   bottom: 12px;
   right: 12px;
-  z-index: 9999;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   align-items: center;
